Bug 1240903 - Fixing copy/paste error in ref 15454eb97bbe from bug 1202401. r=mkmelin